--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "tiny-invariant": "^1.1.0",
     "tiny-warning": "^1.0.3",
     "web-vitals": "^1.0.1"
   },
@@ -39,7 +40,10 @@
   },
   "devDependencies": {
     "history": "^5.0.1",
+    "mini-create-react-context": "^0.4.1",
+    "path-to-regexp": "^6.2.0",
     "prop-types": "^15.7.2",
+    "react-is": "^17.0.2",
     "react-router": "^5.2.1"
   }
 }
